[package]
name = "exposome-explorer-rs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords = ["exposome", "biomarker", "arrow", "environmental"]
description = "Environmental exposure biomarker associations from Exposome Explorer"

[dependencies]

[lints]
workspace = true
